--- a/.env
+++ b/.env
@@ -13,31 +13,31 @@ ROLE_PASSWORD_WHATTHEDUCK=whattheduckpass
 ROLE_PASSWORD_RAWSQL=rawsqlpass
 ROLE_PASSWORD_ADMIN=adminpass
 
-DATABASE_DM_HOST=db_dm
+DATABASE_DM_HOST=db
 DATABASE_DM_PORT=3306
 DATABASE_DM_USER=root
 DATABASE_DM_PASS=changeme
 DATABASE_DM_DB=dm
 
-DATABASE_COA_HOST=db_coa
+DATABASE_COA_HOST=db
 DATABASE_COA_PORT=3306
 DATABASE_COA_USER=root
 DATABASE_COA_PASS=changeme
 DATABASE_COA_DB=coa
 
-DATABASE_DM_COVER_ID_HOST=db_cover_id
+DATABASE_DM_COVER_ID_HOST=db
 DATABASE_DM_COVER_ID_PORT=3306
 DATABASE_DM_COVER_ID_USER=root
 DATABASE_DM_COVER_ID_PASS=changeme
 DATABASE_DM_COVER_ID_DB=cover_info
 
-DATABASE_DM_STATS_HOST=db_dm_stats
+DATABASE_DM_STATS_HOST=db
 DATABASE_DM_STATS_PORT=3306
 DATABASE_DM_STATS_USER=root
 DATABASE_DM_STATS_PASS=changeme
 DATABASE_DM_STATS_DB=dm_stats
 
-DATABASE_EDGECREATOR_HOST=db_edgecreator
+DATABASE_EDGECREATOR_HOST=db
 DATABASE_EDGECREATOR_PORT=3306
 DATABASE_EDGECREATOR_USER=root
 DATABASE_EDGECREATOR_PASS=changeme
