--- a/composer.json
+++ b/composer.json
@@ -22,40 +22,46 @@
         "ext-json": "*",
         "beberlei/doctrineextensions": "^1.2",
         "cloudinary/cloudinary_php": "^2.0",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.13",
         "pusher/pusher-push-notifications": "^1.1",
-        "sensio/framework-extra-bundle": "^5.2",
+        "sensio/framework-extra-bundle": "^5.4",
         "sentry/sentry-symfony": "^4.1",
         "symfony-bundles/json-request-bundle": "^3.0",
-        "symfony/console": "^5.2",
-        "symfony/dotenv": "^5.2",
+        "symfony/console": "^5.4",
+        "symfony/dotenv": "^5.4",
         "symfony/flex": "^1.4",
-        "symfony/framework-bundle": "^5.2",
+        "symfony/framework-bundle": "^5.4",
         "symfony/maker-bundle": "^1.12",
         "symfony/monolog-bundle": "^3.4",
-        "symfony/orm-pack": "^2.0",
-        "symfony/security-bundle": "^5.2",
-        "symfony/serializer": "^5.2",
+        "symfony/proxy-manager-bridge": "5.4.*",
+        "symfony/security-bundle": "^5.4",
+        "symfony/serializer": "^5.4",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/translation": "^5.2",
-        "symfony/twig-bundle": "^5.2",
-        "symfony/validator": "^5.2",
-        "symfony/yaml": "^5.2"
+        "symfony/translation": "^5.4",
+        "symfony/twig-bundle": "^5.4",
+        "symfony/validator": "^5.4",
+        "symfony/yaml": "^5.4"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
         "liip/test-fixtures-bundle": "^1.3.0",
         "roave/security-advisories": "dev-master",
-        "symfony/browser-kit": "^5.2",
-        "symfony/css-selector": "^5.2",
-        "symfony/phpunit-bridge": "^5.2",
-        "symfony/stopwatch": "^5.2",
-        "symfony/web-profiler-bundle": "^5.2"
+        "symfony/browser-kit": "^5.4",
+        "symfony/css-selector": "^5.4",
+        "symfony/phpunit-bridge": "^5.4",
+        "symfony/stopwatch": "^5.4",
+        "symfony/web-profiler-bundle": "^5.4"
     },
     "config": {
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
@@ -93,7 +99,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.2.*"
+            "require": "5.4.*"
         }
     }
 }
