--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,5 +1,5 @@
 security:
-    encoders:
+    password_hashers:
         Symfony\Component\Security\Core\User\User: plaintext
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
