Revert "Fix deperecation"
This reverts commit 39b3f05c1e5577b54473a84899614c44b00d3899.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,5 +1,5 @@
 security:
-    password_hashers:
+    encoders:
         Symfony\Component\Security\Core\User\User: plaintext
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
